--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="container">
             <div class="center wow fadeInDown">
                 <h2>Recent Works</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut et dolore magna aliqua. Ut enim ad minim veniam</p>-->
             </div>
 
             <div class="row">
