--- a/contact-us.html
+++ b/contact-us.html
@@ -55,8 +55,7 @@
 		</div>
 	</div>
 	<div class="map col-xs-12 col-sm-8">
-		<iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Kuningan,+Jakarta+Capital+Region,+Indonesia&amp;aq=3&amp;oq=kuningan+&amp;sll=37.0625,-95.677068&amp;sspn=37.410045,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Kuningan&amp;t=m&amp;z=14&amp;ll=-6.238824,106.830177&amp;output=embed">
-		</iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2004988.0773844926!2d74.7969055263171!3d11.039200881556987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7f043c1d732d7%3A0xcbb339ca6680f64e!2sSaint+Joseph+Industries!5e0!3m2!1sen!2sin!4v1516898288283" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 	
 	<!--<section id="contact-page">
