--- a/contact-us.html
+++ b/contact-us.html
@@ -52,10 +52,12 @@
 			Govt. Industrial Estate, P.O. Ollur, 680 306,
 			<br>
 			Thrissur DT., Kerala, South India.
+			<br>
+			contact@sainjo.in
 		</div>
 	</div>
 	<div class="map col-xs-12 col-sm-8">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2004988.0773844926!2d74.7969055263171!3d11.039200881556987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7f043c1d732d7%3A0xcbb339ca6680f64e!2sSaint+Joseph+Industries!5e0!3m2!1sen!2sin!4v1516898288283" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62775.37239247572!2d76.22356644268842!3d10.464295467841449!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcbb339ca6680f64e!2sSaint+Joseph+Industries!5e0!3m2!1sen!2sin!4v1517334346692" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 	
 	<!--<section id="contact-page">
