--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
 					<div class="carousel-inner">
 						<div class="item active">
-							<img src="images/slider_one.jpg" class="img-responsive" alt=""> 
+							<img src="images/slider_three.jpg" class="img-responsive" alt=""> 
 					   </div>
 					   <div class="item">
 							<img src="images/slider_one.jpg" class="img-responsive" alt=""> 
 					   </div> 
 					   <div class="item">
-							<img src="images/slider_one.jpg" class="img-responsive" alt=""> 
+							<img src="images/slider_two.jpg" class="img-responsive" alt=""> 
 					   </div> 
 					</div>
 					
@@ -160,12 +160,12 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item1.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/1.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Business theme</a> </h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item1.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <h3><a href="#">St. Joseph’s Industrials</a> </h3>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/1.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
@@ -173,12 +173,12 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item2.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/2.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Business theme</a></h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item2.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <h3><a href="#">St. Joseph’s Industrials</a></h3>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/2.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
@@ -186,12 +186,12 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item3.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/3.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Business theme </a></h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item3.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <h3><a href="#">St. Joseph’s Industrials </a></h3>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/3.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
@@ -199,12 +199,12 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item4.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/4.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
                                 <h3><a href="#">MultiPurpose theme </a></h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item4.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/4.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
@@ -212,12 +212,12 @@
                 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item5.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/5.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Business theme</a></h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item5.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <h3><a href="#">St. Joseph’s Industrials</a></h3>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/5.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
@@ -225,12 +225,12 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item6.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/6.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Business theme </a></h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item6.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <h3><a href="#">St. Joseph’s Industrials </a></h3>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/6.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
@@ -238,12 +238,12 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item7.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/7.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Business theme </a></h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item7.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <h3><a href="#">St. Joseph’s Industrials </a></h3>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/7.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
@@ -251,12 +251,12 @@
 
                 <div class="col-xs-12 col-sm-4 col-md-3">
                     <div class="recent-work-wrap">
-                        <img class="img-responsive" src="images/portfolio/recent/item8.png" alt="">
+                        <img class="img-responsive" src="images/portfolio/recent/8.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="#">Business theme </a></h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority</p>
-                                <a class="preview" href="images/portfolio/full/item8.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                <h3><a href="#">St. Joseph’s Industrials </a></h3>
+                                <p> Environment Friendly Equipments to satisfy modern industrial needs.</p>
+                                <a class="preview" href="images/portfolio/recent/8.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
                     </div>
